--- a/SpecFlowNetFloristProj/Configuration/App.config
+++ b/SpecFlowNetFloristProj/Configuration/App.config
@@ -2,6 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="BaseUrl" value="https://stage2.netflorist.co.za/" />
-		<add key="TimeoutSeconds" value="100" />
+		<add key="Username" value="username" />
+		<add key="Password" value="password" />
 	</appSettings>
 </configuration>
