--- a/SpecFlowNetFloristProj/SpecFlowNetFloristProj.csproj
+++ b/SpecFlowNetFloristProj/SpecFlowNetFloristProj.csproj
@@ -49,6 +49,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+    <PackageReference Include="System.IO" Version="4.3.0" />
     <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
     <PackageReference Include="WebDriverManager" Version="2.16.3" />
   </ItemGroup>
